# make_prg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Snakefile  TODO.txt  config.yaml  make_prg_from_msa.py  snakemake_requirements.txt  summary.tsv  test_get_interval_seqs.py  test_some_functions.py
containers/: Dockerfile
cpp/: BuildPRG.cpp  BuildPRG.h  PRGBoostGraph.cpp  PRGBoostGraph.h  Subalignment.cpp  Subalignment.h  Utils.cpp  Utils.h  cluster.py  includes.h  main.cpp
eda/: get_make_prg_runtime.ipynb
fourway_test_cases/GC00000262_12/: GC00000262_12.clustalo.fa  GC00000262_12.max_nest5.min_match7.gfa  GC00000262_12.max_nest5.min_match7.prg
fourway_test_cases/GC00000579_3/: GC00000579_3.clustalo.fa  GC00000579_3.max_nest5.min_match7.gfa  GC00000579_3.max_nest5.min_match7.prg
fourway_test_cases/GC00002312/: GC00002312.clustalo.fa  GC00002312.max_nest5.min_match7.gfa  GC00002312.max_nest5.min_match7.prg
fourway_test_cases/GC00003909_3/: GC00003909_3.max_nest5.min_match7.gfa  GC00003909_3.max_nest5.min_match7.prg
fourway_test_cases/old_MSAs/: GC00000262_12.clustalo.fa  GC00000579_3.clustalo.fa  GC00003909_3.clustalo.fa
fourway_test_cases/updated_MSAs/: GC00003909_3.clustalo.fa
make_prg/: io_utils.py
sample_example/: nested.fa  nested.fa.max_nest10.min_match3.gfa.csv  nested.fa.max_nest10.min_match3.prg  nested2.fa  old_nested.fa.max_nest10.min_match3.gfa  old_nested.fa.max_nest10.min_match3.gfa.csv  old_nested.fa.max_nest10.min_match3.prg
scripts/: run_make_prg.py
test/: get_interval_seqs_test0.fa  get_interval_seqs_test1.fa  get_interval_seqs_test2.fa  get_interval_seqs_test3.fa  get_interval_seqs_test4.fa  get_interval_seqs_test5.fa  nested.fa  nested.fa.max_nest10.min_match3.gfa  nested.fa.max_nest10.min_match3.gfa.csv  nested.fa.max_nest10.min_match3.prg  nested_bandage.fa.max_nest10.min_match3.gfa
